<resources>

    <string name="app_name">Tech News</string>

    <string name="Error_Message">No internet connection. Please check your connection.</string>

    <string name="settings_menu_item">Settings</string>

    <string name="settings_title">Tech Settings</string>

    <string name="settings_order_by" translatable="false">Order By</string>

    <string name="settings_order_by_key" translatable="false">order-by</string>

    <string name="settings_order_by_default" translatable="false">@string/relevant_value</string>

    <string name="relevant" translatable="false">Newest</string>

    <string name="relevant_value" translatable="false">newest</string>

    <string name="oldest" translatable="false">Oldest</string>

    <string name="oldest_value" translatable="false">oldest</string>

    <string name="date" translatable="false">Date of Publication</string>

    <string name="date_default" translatable="false">published</string>

    <string name="date_hint" translatable="false">published or first-publication or last-modified</string>

    <string name="date_key" translatable="false">use-date</string>

    <string-array name="settings_order_by">
        <item>@string/relevant</item>
        <item>@string/oldest</item>
    </string-array>

    <string-array name="settings_order_by_values">
        <item>@string/relevant_value</item>
        <item>@string/oldest_value</item>
    </string-array>


</resources>
